Cache tests requiring JDK module access